tests/sksl/errors/GrCannotReturnWithSkOutColor.fp
half4 main() {
    sk_OutColor = half4(1, 0, 1, 0);
    return;
}
